--- a/templates/chat.html
+++ b/templates/chat.html
@@ -49,7 +49,7 @@
                     </div>
                     <div class="user_info">
                       <span>Scraping Machine</span>
-                      <p>GPT Chat Mode</p>
+                      <p>Upload any financial statement for analysis.</p>
                     </div>
                   </div>
                 </div>
